# biocomp

./: .gitignore  .thoughts.md  README.md  \  conftest.py  export_recipe.py  grn.py  ideas.md  pyproject.toml  samedisoir.md  setup.cfg  setup.py  torchmodules.py  utils.py
XP/: README.md  example_xpfile.json  test_dataImport.ipynb  test_dataPlotting.ipynb  test_import.py
XP/geostruct/: Aggregate.py  Experiment.py  Plasmid.py  Tube.py  __init__.py  flowgeo.py
biocomp/: __init__.py  _legacy_deprecation.py  async_logger.py  biorules.py  calibration.py  compilation_cache.py  compute.py  compute_multi.py  compute_old.py  construct.py  context.py  datautils.py  defaults.py  design.py  design_eval.py  design_prune_controller.py  design_pruning.py  design_run.py  design_runtime.py  design_session.py  design_targets.py  designcodec.py  designdebug.py  designloss.py  designoptim.py  designutils.py  designutils2.py  evo.py  fingerprint.py  graph.py  graphengine.py  graphprint.py  graphrules.py  inversion.py  jaxutils.py  library.py  logger_dispatch.py  logging_config.py  metric_utils.py  models.py  (+41 more)
biocomp-ui/constructome_server/: constructome.db  server.py
biocomp-ui/frontend/: \  package-lock.json  package.json
biocomp-ui/frontend/d3/: test.html
biocomp-ui/frontend/src/: AGGNode.jsx  AppComponent.js  CTENode.jsx  ComputeComponent.jsx  ContentEdge.jsx  DENDNode.jsx  DNAContent.jsx  DNAContent_back.tsx  DNANode.jsx  GRNComponent.jsx  INNode.jsx  INVNode.jsx  IndividualParamInput.jsx  NUMNode.jsx  NedComponent.jsx  OUTNode.jsx  PRTNode.jsx  ParamInput.jsx  RNANode.jsx  SEQNode.jsx  SRCNode.jsx  TCNode.jsx  TLNode.jsx  TLNode_back.jsx  app.html  app.js  index.html  index.js  old_AGGNode.jsx  shapes.jsx  stackplot.html  stackplot.js  static_index.html  static_index.js  style.css  style_app.css  tuner.html  tunerapp.js  util.jsx
biocomp-ui/frontend/tracer/: Menu.js  Plot.js  SliderAxis.js  constants.js  data.js  index.html  (+4 more)
biocomp-ui/server/: server.py
biocomp-ui/tuner_server/: old_server.py  oldserver.py  server.py
biocomp/artefacts/: parts_library.pickle
biocomp/biocomp_default_config/: colors.yaml  compute_config.yaml  data_config.yaml
biocomp/config/: __init__.py  biocomp_colors.yaml  biocomp_constants.yaml  compute_config.yaml  default_compute_config.yaml  default_data_config.yaml  parts_db_index.yaml  plotconf.yaml  simple_nodes_compute_config.yaml
biocomp/experimental/: spectral_unmixing.py
biocomp/nodes/: __init__.py  aggregation.py  bias.py  ern.py  output.py  passthrough.py  source.py  transform.py
biocomp/nsga2jax/: __init__.py  crowding.py  nsga2.py  operators.py  pareto.py  selection.py
biocomp/old_network/: compute.py  network.py  nodes.py  quantization.py  recipe.py
biocomp/plotting/: README_svg_3d_viewer.md  ascii_heatmap.py  knn_utils_jax.py  knn_utils_np.py  plotting_3d.py  plotting_core.py  plotting_core_jax.py  plotting_density.py  plotting_histogram.py  plotting_mvp.py  plotting_oldmethods.py  plotting_particle.py  plotting_scatter.py  plotting_smooth.py  plotting_smooth_1d.py  plotting_smooth_2d.py  plotting_txt.py  plotting_violin.py  stacked_poly.py  svg_viewer.html
biocomp/pluggable_opt/: __init__.py  codec.py  optimizers.py  run_pluggable.py
biocomp/test_data/: recipe00.json5
biocomp/tests/: test_paramintrospect.py  test_tu_masking_gradients.py
cax/: cax.py
data/: category.csv  database.db  schema.sql  test.py
dcell/: cax.py  dcell.py  proto_00.py  proto_simu_00.py  proto_simu_01.py  test_dcell.py
georgs-playground/: equations.ipynb
plots/: 00-cascade.py  01-nodes.py  02-dual_region.py  common.py
runscripts/: 00-matrix_train.sh  launch.sh
scripts/: 00-proto_compiler.py  01-hello.py  01-using-compiler-lib.py  02-slot-draft.py  02-stochastic-stuff.py  03-parameters-and-slots.py  04-loading-an-experiment.py  05-merge-at-prt.py  06-use-new-architecture.py  07-train.py  08-train_2.py  09-train_3.py  10-train.py  11-optimize-training.py  12-generate.py  13-inverse_nn.py  14-nodes_plot.py  15-finding_a_bandpass.py  16-manual_bandpass.py  17-cmaes.py  18-newdata.py  19-georg_recipes.py  20-debug.py  21-train.py  22-analysis.py  23-debug.py  24-train_synth.py  25-train_tweaks.py  26-stochastic.py  27-stochastic.py  28-datadistribution.py  29-stochastic.py  30-pipeline.py  31-training_with_quantiles.py  32-predict_things.py  33-clean_train.py  34-analysis.py  35-input_distributions.py  36-beads_calibration.py  37-calibration.py  (+63 more)
tests/: conftest.py  generate_golden_complex_twolayers.py  test_auto_l1_naming.py  test_bias_node.py  test_biorules.py  test_commit_fingerprint_consistency.py  test_commit_tu_masking_two_and_one_skip.py  test_complex_twolayers_computation.py  test_complex_twolayers_roundtrip.py  test_context.py  test_data_weights.py  test_datatarget_scaling.py  test_declarative_recipes.py  test_density_balanced_sampling.py  test_design.py  test_design_commit_consistency.py  test_design_commit_scaffold.py  test_design_constraints.py  test_design_defensive.py  test_design_l0_config.py  test_design_logged_vs_committed.py  test_design_logged_vs_committed_long.py  test_design_runtime.py  test_design_sampling.py  test_design_stack_consistency.py  test_designcodec.py  test_designloss_contrast.py  test_designloss_coupling.py  test_designloss_ern_tying.py  test_designoptim.py  test_designutils_loss_table.py  test_ern_pruning.py  test_fingerprint.py  test_graphconversion.py  test_graphengine.py  test_hard_pruning.py  test_input_axes.py  test_input_order.py  test_inv_aggregation.py  test_jax_schedules.py  (+45 more)
tests/test_data/: final_params.pickle
tools/: xp_parser.py
tools/jeanplot/: devbook_00.py  devbook_01.py  devbook_02.py  pyproject.toml  setup.cfg
tools/jeanplot/jeanplot/: __init__.py  requirements.txt
tools/jeanplotter/: devbook_00.py  devbook_01.py
tools/xp_parser/: 3d_plot_attempts.py  allxps.db  build_network_table.py  build_xp_table.py  common.py  plot_network_data.py  plot_network_predictions.py  xp_parser.py  xpdf.csv
webapp/: app.py  utils.py
webapp/node-editor-component/: setup.py
writings/: ideas.md
(+70 files in other folders)
