[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pyright]
reportMissingImports = true
reportMissingTypeStubs = false
typeCheckingMode = "off"

[tool.ruff]
lint.ignore = ["E741"]
line-length = 100
target-version = "py311" # Assume Python 3.11.

[project]
name = "biocomp"
authors = [{name = "Jean Disset", email = "jdisset@mit.edu"}]
version = "0.0.1"
readme = "README.md"
description = "Automated design and predictions of neuromorphic synthetic biology circuits."
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "jax",
    "ml-dtypes",
    "optax",
    "evosax",
    "pandas",
    "scipy",
    "matplotlib",
    "matplotlib-label-lines",
    "pydantic",
    "plotly",
    "joblib",
    "json5",
    "rich",
    "base58",
    "tqdm",
    "xxhash",
	"dracon",
	"wandb"
]

[tool.hatch.build.targets.wheel]
packages = ["biocomp"]

[tool.hatch.build.targets.wheel.sources]
"biocomp" = "biocomp"

