[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pyright]
typeCheckingMode = "basic"
reportMissingImports = "warning"
reportMissingTypeStubs = false
reportUnknownMemberType = false
reportUnknownVariableType = false
reportUnknownArgumentType = false
reportUnknownParameterType = false
reportMissingParameterType = false
reportAny = false
reportImplicitOverride = false
reportUnusedCallResult = false
reportDeprecated = false
reportImportCycles = false
# Type errors to address incrementally
reportArgumentType = "warning"
reportAttributeAccessIssue = "warning"
reportOptionalMemberAccess = "warning"
reportIndexIssue = "warning"
reportOptionalSubscript = "warning"
reportGeneralTypeIssues = "warning"
reportOperatorIssue = "warning"
reportReturnType = "warning"
reportAssignmentType = "warning"
reportCallIssue = "warning"
reportOptionalIterable = "warning"
reportOptionalCall = "warning"
reportPrivateImportUsage = "warning"
reportInvalidTypeForm = "warning"
reportOptionalOperand = "warning"
reportRedeclaration = "warning"

[tool.ty.rules]
# Type errors to address incrementally - ignore for now
invalid-argument-type = "ignore"
not-subscriptable = "ignore"
unresolved-attribute = "ignore"
unsupported-operator = "ignore"
invalid-assignment = "ignore"
invalid-return-type = "ignore"
invalid-parameter-default = "ignore"
unresolved-import = "ignore"
invalid-type-form = "ignore"
not-iterable = "ignore"
no-matching-overload = "ignore"
call-non-callable = "ignore"
unknown-argument = "ignore"
invalid-method-override = "ignore"
parameter-already-assigned = "ignore"
missing-argument = "ignore"
invalid-key = "ignore"
index-out-of-bounds = "ignore"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "B", "W"]
ignore = ["E741", "E501", "B023"]

[project]
name = "biocomp"
authors = [{name = "Jean Disset", email = "jdisset@mit.edu"}]
version = "0.0.1"
readme = "README.md"
description = "Automated design and predictions of neuromorphic synthetic biology circuits."
license = {file = "LICENSE"}
requires-python = ">=3.11"
dependencies = [
	"assertpy",
    "numpy",
    "jax",
    "ml-dtypes",
    "optax",
    "evosax",
    "pandas",
    "scipy",
    "pykdtree",
    "usearch>=2.0",
    "numba>=0.59",
    "matplotlib",
    "matplotlib-label-lines",
    "pydantic",
    "plotly",
    "joblib",
    "json5",
    "rich",
    "base58",
    "tqdm",
    "xxhash",
	"dracon",
	"jax-tqdm",
	"pytest",
	"h5py",
	"svgpath2mpl",
	"svgelements>=1.9.0",
	"jeanplot",
]

[tool.hatch.build.targets.wheel]
packages = ["biocomp"]

[tool.hatch.build.targets.wheel.sources]
"biocomp" = "biocomp"

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"

