[metadata]
name = biocomp
version = 0.2.1_dev
author = Jean Disset
author_email = jdisset@mit.edu
url = https://github.com/jdisset/biocomp
description = Automated design and predictions of neuromorphic synthetic biology circuits.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = biology, synthetic biology
# license = ??

[options]
packages = biocomp
zip_safe = True
install_requires =
	jax
	numpy
	pandas



#include_package_data = True

#[options.package_data]
#example = data/schema.json, *.txt
#* = README.md
