[metadata]
name = jeanplot
version = 0.0.1_dev
author = Jean Disset
author_email = jdisset@mit.edu
url = https://github.com/jdisset/biocomp
description = Plotting tool for neuromorphic synthetic biology circuits.
keywords = biology, synthetic biology
# license = ??

[options]
packages = jeanplot
zip_safe = True
install_requires =
	numpy
	pandas
